--- a/sass/sections/_testimonials05bis.scss
+++ b/sass/sections/_testimonials05bis.scss
@@ -25,6 +25,7 @@
             p {
                 font-style: italic;
                 margin-bottom: 15px;
+                color: $colortitulos;
             }
 
         }
