--- a/sass/sections/_whyus07.scss
+++ b/sass/sections/_whyus07.scss
@@ -19,6 +19,8 @@
             border-radius: 15px;
             margin: 0;
             padding: 15px;
+            transition: 0.3s ease-in-out;
+
 
             &:hover {
                 background-color: $fondo_cardhover;
