--- a/sass/sections/_team06.scss
+++ b/sass/sections/_team06.scss
@@ -35,6 +35,7 @@
         margin-bottom: 20px;
         transition: 0.5s ease-in;
         position: relative;
+        transform: scale(0.9);
 
         &:hover .text{
             transform: translateY(-15px);
@@ -59,22 +60,23 @@
             color:white;
             position:absolute;
             top: 130px;
-            left:115px;
+            left:90px;
             opacity:0;
             transition:0.2s ease-in;    
             text-align: center;
                 h1{
-                    font-size: 110%;
+                    font-size: 130%;
                     margin:auto; 
                 }
                 h2{
                     font-weight: 400;
-                    font-size: 70%;
+                    font-size: 100%;
                 }
             .tredes{
                 padding-top:5px;
                 text-align: center;
                 i{
+                    font-size: 100%;
                     &:hover{
                         color:$acentos;
                         cursor:pointer;
@@ -89,6 +91,7 @@
     
     .uno  {
         background: url("../imagenes/team-01.jpg");
+        
 
     }
 
@@ -121,8 +124,8 @@
             flex-direction: row;
             align-content: center;
             .text{
-                font-size: 30px;
-                left:59px;
+                font-size: 15px;
+                left:54px;
                 top:101px;
             }
 
@@ -135,6 +138,9 @@
                 width:255px;
                 height: 255px;
                 }
+            }
+            .uno{
+                
             }
 
             
