--- a/estilo/all.css
+++ b/estilo/all.css
@@ -807,7 +807,6 @@ body h4 {
   width: 100%;
   padding-right: 0px;
   padding-left: 0px;
-  box-sizing: border-box;
   background: white;
 }
 #team header {
@@ -829,93 +828,88 @@ body h4 {
   color: #556877;
   line-height: 1.6;
 }
-#team .card {
+#team .cards {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+#team .cards .card {
+  align-self: center;
   border-radius: 50%;
   width: 330px;
   height: 330px;
-  margin: auto;
-  margin-bottom: 20px;
+  margin-bottom: 80px;
   transition: 0.5s ease-in;
   position: relative;
-  transform: scale(0.9);
 }
-#team .card:hover .text {
+#team .cards .card img {
+  border-radius: 50%;
+}
+#team .cards .card:hover .text {
   transform: translateY(-15px);
   opacity: 1;
 }
-#team .card .fondoazul {
+#team .cards .card .fondoazul {
   background: #004a99;
-  border-radius: 50%;
-  width: 330px;
-  height: 330px;
+  border-radius: 50% 50%;
+  width: 400px;
+  height: 400px;
   margin: auto;
   transition: 0.2s ease-in;
   opacity: 0;
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
-#team .card .fondoazul:hover {
+#team .cards .card .fondoazul:hover {
   opacity: 0.6;
 }
-#team .card .text {
+#team .cards .card .text {
   color: white;
   position: absolute;
-  top: 130px;
-  left: 90px;
+  top: 161px;
+  left: 117px;
   opacity: 0;
   transition: 0.2s ease-in;
   text-align: center;
 }
-#team .card .text h1 {
+#team .cards .card .text h1 {
   font-size: 130%;
   margin: auto;
 }
-#team .card .text h2 {
+#team .cards .card .text h2 {
   font-weight: 400;
   font-size: 100%;
 }
-#team .card .text .tredes {
+#team .cards .card .text .tredes {
   padding-top: 5px;
   text-align: center;
 }
-#team .card .text .tredes i {
+#team .cards .card .text .tredes i {
   font-size: 100%;
 }
-#team .card .text .tredes i:hover {
+#team .cards .card .text .tredes i:hover {
   color: #007bff;
   cursor: pointer;
   opacity: 1;
 }
-#team .uno {
-  background: url("../imagenes/team-01.jpg");
-}
-#team .dos {
-  background: url("../imagenes/team-02.jpg");
-}
-#team .tres {
-  background: url("../imagenes/team-03.jpg");
-}
-#team .cuatro {
-  background: url("../imagenes/team-04.jpg");
-}
 
 @media (min-width: 992px) {
+  #team header h1 {
+    font-size: 50px;
+  }
   #team .cards {
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
+    margin: 0;
   }
   #team .cards .text {
-    font-size: 15px;
+    font-size: 20px;
     left: 54px;
     top: 101px;
   }
   #team .cards .card {
-    width: 255px;
-    height: 255px;
-  }
-  #team .cards .card .fondoazul {
-    width: 255px;
-    height: 255px;
+    width: 400px;
+    height: auto;
   }
 }
 #why-us {
