--- a/sass/sections/_team06.scss
+++ b/sass/sections/_team06.scss
@@ -2,7 +2,7 @@
     width: 100%;
     padding-right: 0px;
     padding-left: 0px;
-    box-sizing: border-box;
+    
     background: white;
     
     header{
@@ -26,122 +26,104 @@
 
         }
     } 
-
-    .card{
-        border-radius: 50%;
-        width: 330px;
-        height: 330px;
-        margin:auto;
-        margin-bottom: 20px;
-        transition: 0.5s ease-in;
-        position: relative;
-        transform: scale(0.9);
-
-        &:hover .text{
-            transform: translateY(-15px);
-            opacity:1;
-        }
-
-        .fondoazul{
-            background: $fondo;
+    .cards{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        .card{
+            align-self: center;
             border-radius: 50%;
             width: 330px;
             height: 330px;
-            margin:auto;
-            transition: 0.2s ease-in;
-            opacity:0;
+            
+            margin-bottom: 80px;
+            transition: 0.5s ease-in;
+            position: relative;
 
-            &:hover{
-                opacity:0.6;
+            img{
+                border-radius: 50%;  
             }
-        }
 
-        .text{
-            color:white;
-            position:absolute;
-            top: 130px;
-            left:90px;
-            opacity:0;
-            transition:0.2s ease-in;    
-            text-align: center;
-                h1{
-                    font-size: 130%;
-                    margin:auto; 
+            &:hover .text{
+                transform: translateY(-15px);
+                opacity:1;
+            }
+
+            .fondoazul{
+                background: $fondo;
+                border-radius: 50% 50%;
+                width: 400px;
+                height: 400px;
+
+                margin:auto;
+                transition: 0.2s ease-in;
+                opacity:0;
+                position:absolute;
+                top:0px;
+                left:0px;
+
+                &:hover{
+                    opacity:0.6;
                 }
-                h2{
-                    font-weight: 400;
-                    font-size: 100%;
-                }
-            .tredes{
-                padding-top:5px;
+                
+            }
+
+            .text{
+                color:white;
+                position:absolute;
+                top: 161px;
+                left:117px;
+                opacity:0;
+                transition:0.2s ease-in;    
                 text-align: center;
-                i{
-                    font-size: 100%;
-                    &:hover{
-                        color:$acentos;
-                        cursor:pointer;
-                        opacity: 1;
+                    h1{
+                        font-size: 130%;
+                        margin:auto; 
+                    }
+                    h2{
+                        font-weight: 400;
+                        font-size: 100%;
+                    }
+
+                .tredes{
+                    padding-top:5px;
+                    text-align: center;
+                    i{
+                        font-size: 100%;
+                        &:hover{
+                            color:$acentos;
+                            cursor:pointer;
+                            opacity: 1;
+                        }
                     }
                 }
             }
-
-
         }
     }
-    
-    .uno  {
-        background: url("../imagenes/team-01.jpg");
-        
-
-    }
-
-    .dos {
-        background: url("../imagenes/team-02.jpg");
-
-    }
-
-    .tres {
-        background: url("../imagenes/team-03.jpg");
- 
-    }
-
-    .cuatro {
-        background: url("../imagenes/team-04.jpg");
-
-    }
-
-
-
-
 }
 
 @include desktop {
     #team{
+        header{
+            h1{
+                font-size: 50px;
+            }
+        }
         
         .cards{
-            width: 100%;
-            display:flex;
-            flex-direction: row;
-            align-content: center;
+            width:100%;
+            margin:0;
+            
             .text{
-                font-size: 15px;
+                font-size: 20px;
                 left:54px;
                 top:101px;
             }
 
-            .card {
-                width:255px;
-                height: 255px;
-
-                .fondoazul {
-                    
-                width:255px;
-                height: 255px;
-                }
-            }
-            .uno{
-                
-            }
+        .card{
+            width:400px;
+            height: auto;
+        }
 
             
             
