correcciones del tp

--- a/sass/all.scss
+++ b/sass/all.scss
@@ -15,3 +15,8 @@
 @import 'layout/footer08'; 
 
  
+/*
+    Lo que es mixins, variables y main deberían estar en una carpeta aparte, algo como "common" o
+    con un nombre que represente algo así. Si quedan sueltos, si bien se entiende, se desaprovecha
+    la flexbilidad de organización que nos permite sass.
+*/
