--- a/sass/layout/_nav01.scss
+++ b/sass/layout/_nav01.scss
@@ -295,4 +295,5 @@
     }
 }
 /* ver que onda esto, no tengo ni idea qué estoy haciendo (?) */
+/* Este tipo de comentarios son más comunes de lo que parece. */
 
