--- a/sass/sections/_ourclients.scss
+++ b/sass/sections/_ourclients.scss
@@ -13,6 +13,7 @@
         display:flex;
         flex-direction: column;
         align-items: center;
+        /* Idem #services header*/
         width: 90vw;
         padding-bottom: 50px;
         
